API Console - Add Clear button

--- a/myalfresco-dashlets/src/main/resources/META-INF/extras/components/console/myalfresco-api.css
+++ b/myalfresco-dashlets/src/main/resources/META-INF/extras/components/console/myalfresco-api.css
@@ -54,3 +54,11 @@
 {
     margin-top: 1em;
 }
+.api-console .run-controls
+{
+    margin-right: 100px;
+}
+.api-console .buttons
+{
+    float: right;
+}
