--- a/myalfresco-dashlets/src/main/resources/META-INF/extras/components/console/myalfresco-api.css
+++ b/myalfresco-dashlets/src/main/resources/META-INF/extras/components/console/myalfresco-api.css
@@ -74,3 +74,15 @@
 {
     float: right;
 }
+
+.api-console .connect {
+    display: none;
+    text-align: center;
+    background-color: #FFFBDD;
+    border-bottom: 1px solid #DDD6A0;
+    padding-top: 8px;
+    padding-bottom: 8px;
+}
+.api-console .connect div {
+    margin-bottom: 1em;
+}
